package com.game.model;

public enum GameStatus {
    READY,
    IN_PROGRESS,
    WON,
    LOST
}
