package com.game.model;

public enum GuessOutcome {
    TOO_LOW,
    TOO_HIGH,
    CORRECT,
    GAME_OVER
}
